Landing page signUp API done